Made some initial script modifications

--- a/build.gradle
+++ b/build.gradle
@@ -35,8 +35,9 @@ dependencies {
 	compile 'org.eclipse.jdt:org.eclipse.jdt.core:3.16.0'
 	compile 'org.apache.commons:commons-text:1.6'
 	compile 'org.kohsuke:github-api:1.95'
-	
-	testCompile 'junit:junit:4.11'
+    compile 'mysql:mysql-connector-java:8.0.13'
+
+    testCompile 'junit:junit:4.11'
 }
 
 applicationName = rootProject.name
